<resources>
    <string name="app_name">RoboCar</string>
    <string name="navigation_home">홈화면</string>
    <string name="navigation_my_page">마이페이지</string>
    <string name="taxi_type_title">원하는 차량 타입을 알려주세요!</string>
    <string name="compact_taxi">소형택시</string>
    <string name="midsize_taxi">중형택시</string>
    <string name="car_pool_title">탑승 유형을 선택해주세요!</string>
    <string name="recruit_car_pool">동승자 모집</string>
    <string name="participate_car_pool">동승 참여</string>
    <string name="return_taxi">내 택시로 돌아가기</string>
    <string name="modify_user_information">회원정보 수정</string>
    <string name="modify_user_password">비밀번호 변경</string>
    <string name="withdrawal"><u>회원탈퇴</u></string>
    <string name="logout"><u>로그아웃</u></string>
    <string name="nickname">닉네임</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="new_password">새 비밀번호</string>
    <string name="password_check">비밀번호 재확인</string>
    <string name="new_password_check">새 비밀번호 확인</string>
    <string name="id_placeholder">아이디를 입력하세요.</string>
    <string name="nickname_placeholder">닉네임을 입력하세요.</string>
    <string name="password_placeholder">비밀번호를 입력하세요.</string>
    <string name="password_re_placeholder">비밀번호를 다시 입력하세요.</string>
    <string name="new_password_placeholder">새 비밀번호를 입력하세요.</string>
    <string name="new_password_re_placeholder">새 비밀번호를 다시 입력하세요.</string>
    <string name="login">로그인</string>
    <string name="sign_up">회원가입</string>
    <string name="modify_success">수정완료</string>
    <string name="sign_up_success">가입완료</string>
    <string name="login_warning_message">로그인 실패했습니다. 다시 로그인해주세요.</string>
    <string name="id_warning_message">이미 존재하는 아이디입니다.</string>
    <string name="password_warning_message">비밀번호와 일치하지 않습니다. 다시 시도해주세요.</string>
    <string name="new_password_warning_message">입력하신 비밀번호와 일치하지 않습니다.</string>
    <string name="nickname_warning_message">이미 존재하는 닉네임입니다.</string>
    <string name="head_check">탑승인원</string>
    <string name="count_passenger">%s 명</string>
    <string name="male">남성</string>
    <string name="female">여성</string>
    <string name="finish_head_count">확인</string>
    <string name="cancel_call">호출취소</string>
    <string name="taxi_call_message">가장 가까운 차고지에 있는\n택시를 호출하고 있어요.</string>
    <string name="car_pool_call_message">동승 가능한 차량을 탐색 중이에요.</string>
    <string name="car_pool_matching_message">동승자를 기다리고 있어요!</string>
    <string name="no_available_car_pool">앗, 현재 동승 가능한 차량이 없어요. \n잠시 후에 다시 시도해주세요.</string>
    <string name="retry_search">다시 탐색하기</string>
    <string name="to_home">메인으로</string>
    <string name="ride_alone">혼자 타기</string>
    <string name="request_car_pool_message">동승 요청 중입니다.\n잠시만 기다려주세요.</string>
    <string name="cancel_car_pool_request">요청취소</string>
    <string name="receive_car_pool_reqeust_message">동승 요청이 들어왔어요!</string>
    <string name="reject">거절하기</string>
    <string name="accept">수락하기</string>
    <string name="check">중복체크</string>
    <string name="user_id">%1$s</string>
    <string name="car_pool_detail">상세정보</string>
    <string name="request_car_pool">동승 요청</string>
    <string name="start_point">출발지</string>
    <string name="end_point">도착지</string>
    <string name="time">시간</string>
    <string name="expected_charge">예상금액</string>
    <string name="passenger_count">인원 수</string>
    <string name="path_setting_title">어디로 갈까요?</string>
    <string name="default_edit_destination">도착지를 입력하세요</string>
    <string name="finish_select_destination">도착지로 설정</string>
    <string name="lock_door">문 잠금</string>
    <string name="unlock_door">문 열기</string>
    <string name="departure">출발하기</string>
    <string name="seat">좌석</string>
    <string name="ventilation_all">전체 통풍</string>
    <string name="heating_all">전체 열선</string>
    <string name="off_all">전체 끄기</string>
    <string name="air_conditioner">에어컨</string>
    <string name="apply_for_car_pool">동승 신청하기</string>
    <string name="logo">RoboCar</string>
    <string name="go_to_riding_taxi">택시 타기</string>
    <string name="reject_car_pool">요청이 거절당했어요.</string>
    <string name="is_available_id">사용 가능한 아이디입니다.</string>
    <string name="is_already_exist_id">이미 존재하는 아이디입니다.</string>
    <string name="network_error_toast_message">네트워크 에러가 발생했습니다.\n다시 시도해주세요.</string>
    <string name="internal_server_error_toast_message">서버 에러가 발생했습니다.\n잠시후 다시 시도해주세요.</string>
    <string name="is_available_nickname">사용 가능한 닉네임입니다.</string>
    <string name="is_already_exist_nickname">이미 존재하는 닉네임입니다.</string>
    <string name="is_already_exist_id_or_nickname">이미 존재하는 아이디 또는 닉네임입니다.</string>
</resources>