<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/modify_user_password"
                android:fontFamily="@font/pretendard_semibold"
                android:textSize="@dimen/title_text"
                android:layout_marginTop="64dp"
                android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password"
                android:lineSpacingExtra="5sp"
                android:gravity="center_vertical"
                android:fontFamily="@font/pretendard_semibold"
                android:textSize="@dimen/content_text"
                android:layout_marginStart="24dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/signUp"
                android:layout_marginTop="48dp"/>

        <org.softeer.robocar.ui.custom.BackPressClearFocusEditText
                android:id="@+id/passwordInputText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/new_password_placeholder"
                android:textSize="@dimen/content_text"
                android:layout_marginStart="@dimen/default_left_margin"
                android:layout_marginEnd="@dimen/default_right_margin"
                android:paddingStart="@dimen/default_left_margin"
                android:paddingEnd="@dimen/default_right_margin"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:fontFamily="@font/pretendard_semibold"
                android:textColor="@color/black"
                android:background="@drawable/rectangle_gray_150_radius_12"
                android:inputType="text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/password"
                android:layout_marginTop="8dp"
                app:layout_constraintHorizontal_bias="0.0"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/passwordCheck"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password_check"
                android:lineSpacingExtra="5sp"
                android:gravity="center_vertical"
                android:fontFamily="@font/pretendard_semibold"
                android:textSize="@dimen/content_text"
                android:layout_marginStart="24dp"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordInputText"
                android:layout_marginTop="40dp"/>

        <org.softeer.robocar.ui.custom.BackPressClearFocusEditText
                android:id="@+id/passwordCheckInputText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/new_password_re_placeholder"
                android:textSize="@dimen/content_text"
                android:layout_marginStart="@dimen/default_left_margin"
                android:layout_marginEnd="@dimen/default_right_margin"
                android:paddingStart="@dimen/default_left_margin"
                android:paddingEnd="@dimen/default_right_margin"
                android:paddingTop="16dp"
                android:paddingBottom="16dp"
                android:fontFamily="@font/pretendard_semibold"
                android:textColor="@color/black"
                android:background="@drawable/rectangle_gray_150_radius_12"
                android:inputType="textPassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordCheck"
                android:layout_marginTop="8dp"/>

        <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/passwordWarningMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password_warning_message"
                android:textColor="@color/red_200"
                android:textSize="@dimen/content_text"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/passwordCheckInputText"
                android:layout_marginTop="8dp"/>

        <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/modifyButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_left_margin"
                android:layout_marginEnd="@dimen/default_right_margin"
                android:background="@drawable/rectangle_gray_600_radius_12"
                android:textColor="@color/white"
                android:textSize="@dimen/title_text"
                android:text="@string/modify_success"
                android:fontFamily="@font/pretendard_semibold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="720dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
