<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rectangle_white_radius_20"
        android:layout_gravity="center"
        android:minWidth="300dp"
        android:minHeight="350dp">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/carPoolRequestTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/receive_car_pool_reqeust_message"
            android:textSize="@dimen/title_text"
            android:fontFamily="@font/pretendard_semibold"
            android:textColor="@color/black"
            app:layout_constraintVertical_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/nickname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="닉네임"
            android:textSize="@dimen/title_text"
            android:fontFamily="@font/pretendard_semibold"
            android:textColor="@color/black"
            android:layout_marginTop="48dp"
            android:layout_marginStart="24dp"
            app:layout_constraintHorizontal_bias="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/carPoolRequestTitle"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/countOfMen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="남성 : 2 명"
            android:textSize="@dimen/title_text"
            android:fontFamily="@font/pretendard_semibold"
            android:textColor="@color/black"
            android:layout_marginTop="24dp"
            app:layout_constraintStart_toStartOf="@id/nickname"
            app:layout_constraintTop_toBottomOf="@id/nickname"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/countOfWomen"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="여성 : 1 명"
            android:textSize="@dimen/title_text"
            android:fontFamily="@font/pretendard_semibold"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="@id/countOfMen"
            app:layout_constraintTop_toBottomOf="@id/countOfMen"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/rejectButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/reject"
            android:textSize="@dimen/title_text"
            android:fontFamily="@font/pretendard_semibold"
            android:textColor="@color/gray_1000"
            android:background="@drawable/rectangle_hyundai_light_sand_radius_12"
            android:layout_marginStart="@dimen/default_left_margin"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/acceptButton"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/acceptButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_right_margin"
            android:text="@string/accept"
            android:textSize="@dimen/title_text"
            android:fontFamily="@font/pretendard_semibold"
            android:textColor="@color/white"
            android:background="@drawable/rectangle_hyundai_blue_radius_12"
            android:layout_marginStart="@dimen/default_left_margin"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/rejectButton"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>